# wonderstreet-demo

./: .gitignore  README.md  main.py  pyproject.toml  watch.py
.cursor/plans/: gmail-integration-completion-7a703665.plan.md  implement-core-logging-1d9face7.plan.md  implement-gmailclient-with-service-account-4315eb1c.plan.md  refactor-gmail-webhook-to-modular-architecture-6838f572.plan.md
.cursor/rules/: cursorrules.mdc
api/v1/routers/: email.py
core/: logging.py
docs/: ARCHITECTURE.md  gmail_pipeline_implementation_plan.md  prd.md
domains/email/: ingestion.py  models.py
domains/property_management/: PM BALANCE SHEET.xlsx
domains/property_management/accounting/: models.py
domains/property_management/maintenance/: models.py
domains/property_management/rentals/: models.py
integrations/: gmail.py
